# mupdf-feedstock

./: anaconda.yaml
recipe/: CMakeLists.txt  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
recipe/patches/: MakefileOSX.patch  Makerules.patch  OSXSharedCreation.patch  bin2coff-release-x64.patch  wdev-buildtools-no-devenv.patch  wrap-msbuild-fallback.patch
